--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@ title: Développement web et projet numérique à Nantes
                     src="/img/bookshelf_mini.png"
                     alt="Miniature de mon site web fullstack The Bookshelf"
                   />
-                  <button class="homepage-projets-btn" tabindex="-1">
+                  <button class="homepage-projets-btn projets-btn-mobile" tabindex="-1">
                     <a href="/projets/projetbookshelf/">Découvrir </a>
                   </button>
                 </div>
@@ -77,9 +77,11 @@ title: Développement web et projet numérique à Nantes
                     <li class="homepage-projets-tags">SQLite</li>
                   </ul>
                   <div class="homepage-projets-grid-item__right__titleanddesc">
-                    <h3>The Bookshelf - Web App</h3>
                     <span>Site web fullstack de réservation de livres</span>
                   </div>
+                  <button class="homepage-projets-btn projets-btn-desktop" tabindex="-1">
+                    <a href="/projets/projetbookshelf/">Découvrir </a>
+                  </button>
                 </div>
               </div>
             </div>
@@ -93,7 +95,7 @@ title: Développement web et projet numérique à Nantes
                     src="/img/feuillu_mini.png"
                     alt="Miniature de mon site web de newsletter"
                   />
-                  <button class="homepage-projets-btn" tabindex="-1">
+                  <button class="homepage-projets-btn projets-btn-mobile" tabindex="-1">
                     <a href="/projets/projetnewsletter/">Découvrir </a>
                   </button>
                 </div>
@@ -104,12 +106,15 @@ title: Développement web et projet numérique à Nantes
                     <li class="homepage-projets-tags">SQLite</li>
                   </ul>
                   <div class="homepage-projets-grid-item__right__titleanddesc">
-                    <h3>Feuillu newsletter - Web App</h3>
                     <span
                       >Site web fullstack d'inscription et d'envoi de
                       newsletter</span
                     >
+                    
                   </div>
+                  <button class="homepage-projets-btn projets-btn-desktop" tabindex="-1">
+                    <a href="/projets/projetnewsletter/">Découvrir </a>
+                  </button>
                 </div>
               </div>
             </div>
