fix(anim projets on homepage - intersection observer) && fix (mobile menu on projets)

--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -63,5 +63,6 @@
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
+    {% include "loadscripts.html"%}
   </body>
 </html>
