added(prefers-reduced-motion post)

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -33,7 +33,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
         </nav>
       </header>
       <main class="container-cv">
-        <button id="download-cv">
+        <button aria-description="Télecharger mon CV" id="download-cv">
           <a href="/assets/CV_data.pdf" download>
             <icon class="ph ph-download"></icon>
           </a>
