fix(link overflowing on blog posts) && (accessibility on videos) && perf(img homepage)

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,12 @@ title: Développement web et projet numérique à Nantes
         <div id="homepage-profil" class="intersect">
           <img
             loading="lazy"
-            src="/img/photo.png"
-            alt="Photo de mon visage"
-            height="90"
-            width="90"
+            src="/img/profil_mobile_59.webp"
+            alt="Mon visage"
+            height="59"
+            width="59"
+            srcset="/img/profil_mobile_59.webp 59w, /img/profil_112.webp 112w"
+            sizes="(max-width: 600px) 59px, 112px"
           />
           <h1>Téotime Pacreau</h1>
         </div>
@@ -60,9 +62,9 @@ title: Développement web et projet numérique à Nantes
                 <div class="homepage-projets-grid-item__left">
                   <img
                     loading="lazy"
-                    width="207"
-                    height="90"
-                    src="/img/bookshelf_mini.png"
+                    width="169"
+                    height="81"
+                    src="/img/bookshelf_mini.webp"
                     alt="Miniature de mon site web fullstack The Bookshelf"
                   />
                   <a
@@ -96,9 +98,9 @@ title: Développement web et projet numérique à Nantes
                 <div class="homepage-projets-grid-item__left">
                   <img
                     loading="lazy"
-                    width="207"
-                    height="90"
-                    src="/img/feuillu_mini.png"
+                    width="169"
+                    height="81"
+                    src="/img/feuillu_mini.webp"
                     alt="Miniature de mon site web de newsletter"
                   />
 
