--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -29,27 +29,27 @@ layout: projetlayout.html
 
     <li><strong>Barre de recherche :</strong></li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/bookshelf-recherche.mp4" aria-label="Search function"></video>
+        <video controls muted src="../../img/bookshelf-recherche.mp4" title="Search function"></video>
     </div>
 
     <li><strong>Filtre :</strong> classement des résultats par note moyenne</li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/bookshelf-filtre.mp4" aria-label="Filter function"></video>
+        <video controls muted src="../../img/bookshelf-filtre.mp4" title="Filter function"></video>
     </div>
 
     <li><strong>Tri :</strong></li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/bookshelf-tri.mp4" aria-label="Filter function"></video>
+        <video controls muted src="../../img/bookshelf-tri.mp4" title="Filter function"></video>
     </div>
 
     <li><strong>Connexion et ajout de livre :</strong> système d'authentification administrateur via session-cookie. L'administrateur à l'authorisation d'ajouter un livre à la collection.</li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/bookshelf-login.mp4" aria-label="Login and adding book"></video>
+        <video controls muted src="../../img/bookshelf-login.mp4" title="Login and adding book"></video>
     </div>
 
     <li><strong>Réservations :</strong> l'utilisateur peut ajouter dans son panier un livre et le réserver en sélectionnant une date de rendu.</li>
     <div id="project-img-wrapper">
-        <video controls muted src="../../img/bookshelf-reservation.mp4" aria-label="Reservation book"></video>
+        <video controls muted src="../../img/bookshelf-reservation.mp4" title="Reservation book"></video>
     </div>
     
 
