built(Generator for OpenGrapg images)

--- a/src/colophon.html
+++ b/src/colophon.html
@@ -1,5 +1,5 @@
 ---
-title: Colophon of Teotime Pacreau website, how it is made with which technologies
+title: Indications sur la façon dont j'ai conçue mon site web
 ---
 
 <!DOCTYPE html>
