--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: Développement web et projet numérique à Nantes
+title: Développement web et management de projets numériques à Nantes
 ---
 
 <!DOCTYPE html>
