--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -1,5 +1,5 @@
 ---
-title: Construction du backend et du frontend d'un système d'une bibliothèque de réservation de livres
+title: Construction du backend et du frontend d'une bibliothèque de réservation de livres
 layout: projetlayout.html
 ---
 <h2>Construction du backend et du frontend d'une bibliothèque de réservation de livres</h2>
