--- a/src/tags.html
+++ b/src/tags.html
@@ -7,7 +7,7 @@ pagination:
 layout: basefortagpage.html
 permalink: /tags/{{tag | slugify }}/index.html
 eleventyComputed:
-  title: Posts taggés avec "{{ tag }}"
+  title: Posts taggés avec {{ tag }}
 ---
 
 <h1>Posts taggés avec <tag class="tags-style">{{ tag }}</a></h1>
