--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -1,5 +1,5 @@
 ---
-title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifications
+title: CV de Téotime Pacreau
 ---
 
 <!DOCTYPE html>
