--- a/src/projets/projetmairies/projetmairies.html
+++ b/src/projets/projetmairies/projetmairies.html
@@ -4,7 +4,7 @@ layout: projetlayout.html
 ---
 <h2>Développement d'un site de Mairie facile à administrer et plaisant à utiliser</h2>
 <div id="project-img-wrapper">
-    <a target="_blank" href="https://mairies.teotimepacreau.fr/"><img src="../../img/mairies-projet.png" loading="lazy" width="600" height="300" alt="Vue de la page d'accueil du site de mairie"></a>
+    <a target="_blank" href="https://mairies.teotimepacreau.fr/"><img src="../../img/mairies-projet.png" loading="eager" width="600" height="300" alt="Vue de la page d'accueil du site de mairie"></a>
 </div>
 <h3>Rôle</h3>
 <p>Développeur du projet, intégration d'un design pré-existant élaboré par <a href="https://timothee.goguely.com/">Timothée Goguely</a></p>
@@ -39,7 +39,7 @@ layout: projetlayout.html
     </div>
     <li><strong>Formulaire de contact :</strong> le formulaire adressé est transféré directement sur le mail de l'administrateur.</li>
     <div id="project-img-wrapper">
-        <video width="603" height="339" controls muted src="../../img/mairies-contact.mp4" title="Remplissage du formulaire et envoi"></video>
+        <video width="603" height="339" controls muted src="../../img/mairies-contactform.mp4" title="Remplissage du formulaire et envoi"></video>
     </div>
 </ol>
 <h3>Ce que j'ai appris</h3>
