--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -4,7 +4,7 @@ layout: projetlayout.html
 ---
 <h2>Construction d'un site d'inscription et d'envoi de newsletter. Développement d'email.</h2>
 <div id="project-img-wrapper">
-    <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" loading="lazy" width="600" height="300" alt="Homepage of the newsletter subscription website : a bento UI with a subscription form aside"></a>
+    <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" loading="eager" width="600" height="300" alt="Homepage of the newsletter subscription website : a bento UI with a subscription form aside"></a>
 </div>
 <h3>Rôle</h3>
 <p>Développeur et designer du projet</p>
