added(on projet homepage : mairie)

--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -32,32 +32,48 @@ title: Mes projets numériques
       <main id="projets">
         <h1>Mes projets</h1>
         <div id="project-card-container">
-          <article id="project-card">
-            <header id="project-img-wrapper">
+
+          <article class="project-card">
+            <header class="project-img-wrapper">
+              <img
+                src="../img/mairies-projet.png" loading="lazy" width="400" height="200"
+                alt="page d'accueil de mon site de mairie"
+              />
+            </header>
+            <main class="project-descripter">
+              <h2 class="project-card-title">
+                <a href="projetmairies">Site de Mairie administrable par CMS</a>
+              </h2>
+              <p>Développeur du projet.</p>
+          </main>
+          </article>
+
+          <article class="project-card">
+            <header class="project-img-wrapper">
               <img
                 src="../img/bookshelf.png" loading="lazy" width="400" height="200"
                 alt="capture of the hompage of the bookshelf organizer website"
               />
             </header>
             <main class="project-descripter">
-              <h2 id="project-card-title">
-                <a href="projetbookshelf">"The Bookshelf", une bibliothèque de réservation de livres</a>
+              <h2 class="project-card-title">
+                <a href="projetbookshelf">"The Bookshelf", un site de réservation de livres</a>
               </h2>
-              <p>Construction du backend et du frontend.</p>
+              <p>Développeur et designeur du projet.</p>
           </main>
           </article>
-          <article id="project-card">
-            <header id="project-img-wrapper">
+          <article class="project-card">
+            <header class="project-img-wrapper">
               <img
                 src="../img/newsletter.png" loading="lazy" width="400" height="200"
                 alt="capture of the hompage of the newsletter subscription website"
               />
             </header>
             <main class="project-descripter">
-              <h2 id="project-card-title">
-                <a href="projetnewsletter">"Feuillu", une newsletter explorant le web-design</a>
+              <h2 class="project-card-title">
+                <a href="projetnewsletter">"Feuillu", un site d'inscription et d'envoi de newsletter</a>
               </h2>
-              <p>Construction du frontend et du backend d'un site d'inscription et d'envoi de newsletter.</p>
+              <p>Newsletter consacrée au web design. Développement d'email.</p>
             </main>
           </article>
         </div>
